# Smart-lock

main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/App/: App_Communication.c  App_Communication.h  App_IO.c  App_IO.h
main/Common/: Com_Config.h  Com_Debug.c  Com_Debug.h
main/Driver/: Dri_BLE.c  Dri_BLE.h  Dri_NVS.c  Dri_NVS.h  Dri_Wifi.c  Dri_Wifi.h
main/Inf/: Inf_DBR6120.c  Inf_DBR6120.h  Inf_FPM383.c  Inf_FPM383.h  Inf_SC12B.c  Inf_SC12B.h  Inf_WS2812.c  Inf_WS2812.h  Inf_WTN6170.c  Inf_WTN6170.h
