idf_component_register(
    SRCS 
        "main.c"
        "Common/Com_Debug.c"
        "Inf/Inf_DBR6120.c"
        "Inf/Inf_WTN6170.c"
        "Inf/Inf_SC12B.c"
        "Inf/Inf_WS2812.c"
        "Inf/Inf_FPM383.c"
        "Driver/Dri_NVS.c"
        "Driver/Dri_BLE.c"
        "App/App_IO.c"
        "App/App_Communication.c"
    INCLUDE_DIRS
         "."
         "Common"
         "Inf"
         "Driver"
         "App")
